[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemy/EnemyBoss.gd" type="Script" id=1]
[ext_resource path="res://Sprites/boss.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 59.9268, 41.714 )

[node name="EnemyBoss" type="KinematicBody2D"]
position = Vector2( -0.918, -0.353 )
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.255, 0.244 )
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 19, 0 )
enabled = true
cast_to = Vector2( 0, 45 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PlayerHit" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="PlayerHit" to="." method="_on_PlayerHit_timeout"]
